--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 — E. B. White
 
 <h2>Blueberries</h2>
-Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.
+<p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
 <figure>
   <img src="images/blueberries.jpg" alt="blue berries on the vine">
   <figcaption>Vaccinium corymbosum</figcaption>
 </figure>
 
 <h3>Nutrition information</h3>
-Per 100 g
+<p>Per 100 g</p>
 <dl>
 <dt>Energy</dt><dd>240 kJ</dd>
 <dt>Carbohydrates</dt><dd>14.49 g</dd>
@@ -40,14 +40,14 @@ Per 100 g
 </dl>
 
 <h2>Grapes</h2>
-Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.
+<p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 <figure>
   <img src="images/grapes.jpg" alt="purple grapes on the vine">
   <figcaption>Vitis vinifera</figcaption>
 </figure>
 
 <h3>Nutrition information</h3>
-Per 100 g
+<p>Per 100 g</p>
 <dl>
 <dt>Energy</dt><dd>288 kJ</dd>
 <dt>Carbohydrates</dt><dd>18.1 g</dd>
@@ -55,14 +55,14 @@ Per 100 g
 </dl>
 
 <h2>Red currant</h2>
-With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
+<p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
 <figure>
 <img src="images/red-currants.jpg" alt="red currants on the vine">
 <figcaption>Ribes rubrum</figcaption>
 </figure>
 
 <h3>Nutrition information</h3>
-Per 100 g
+<p>Per 100 g</p>
 <dl>
 <dt>Energy</dt><dd>234 kJ</dd>
 <dt>Carbohydrates</dt><dd>13.8 g</dd>
