Added padding and margins
Also font family footer and .webs

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 <dt>Protein</dt><dd>1.4 g</dd>
 </dl>
 
+<footer>
 <p class="webs">
 Content and images from <a href="http://en.wikipedia.org/wiki/Berry">Wikipedia.</a>
 </p>
+</footer>
