--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </header>
 
 <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
-“
-We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.
-— E. B. White
+<blockquote class="quotation">“</blockquote>
+<blockquote>We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
+<blockquote class="speaker">— E. B. White</blockquote>
 
 <h2>Blueberries</h2>
 <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
@@ -32,7 +32,9 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 </figure>
 
 <h3>Nutrition information</h3>
+<div>
 <p>Per 100 g</p>
+</div>
 <dl>
 <dt>Energy</dt><dd>240 kJ</dd>
 <dt>Carbohydrates</dt><dd>14.49 g</dd>
@@ -47,7 +49,9 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 </figure>
 
 <h3>Nutrition information</h3>
+<div>
 <p>Per 100 g</p>
+</div>
 <dl>
 <dt>Energy</dt><dd>288 kJ</dd>
 <dt>Carbohydrates</dt><dd>18.1 g</dd>
@@ -62,7 +66,9 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 </figure>
 
 <h3>Nutrition information</h3>
+<div>
 <p>Per 100 g</p>
+</div>
 <dl>
 <dt>Energy</dt><dd>234 kJ</dd>
 <dt>Carbohydrates</dt><dd>13.8 g</dd>
