--- a/index.html
+++ b/index.html
@@ -20,63 +20,59 @@
 </header>
 
 <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
-<blockquote class="quotation">“</blockquote>
-<blockquote>We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
-<blockquote class="speaker">— E. B. White</blockquote>
+<blockquote>
+  <span class="quotation">“</span>
+  <p>We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</p>
+  <div class="speaker">— E. B. White</div>
+</blockquote>
 
 <h2>Blueberries</h2>
-<p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-<figure>
-  <img src="images/blueberries.jpg" alt="blue berries on the vine">
-  <figcaption>Vaccinium corymbosum</figcaption>
-</figure>
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+  <figure>
+    <img src="images/blueberries.jpg" alt="blue berries on the vine">
+    <figcaption>Vaccinium corymbosum</figcaption>
+  </figure>
 
 <h3>Nutrition information</h3>
-<div>
-<p>Per 100 g</p>
-</div>
-<dl>
-<dt>Energy</dt><dd>240 kJ</dd>
-<dt>Carbohydrates</dt><dd>14.49 g</dd>
-<dt>Protein</dt><dd>0.74 g</dd>
-</dl>
+    <p class="whatever">Per 100 g</p>
+  <dl>
+    <dt>Energy</dt><dd>240 kJ</dd>
+    <dt>Carbohydrates</dt><dd>14.49 g</dd>
+    <dt>Protein</dt><dd>0.74 g</dd>
+  </dl>
 
 <h2>Grapes</h2>
-<p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-<figure>
-  <img src="images/grapes.jpg" alt="purple grapes on the vine">
-  <figcaption>Vitis vinifera</figcaption>
-</figure>
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+  <figure>
+    <img src="images/grapes.jpg" alt="purple grapes on the vine">
+    <figcaption>Vitis vinifera</figcaption>
+  </figure>
 
 <h3>Nutrition information</h3>
-<div>
-<p>Per 100 g</p>
-</div>
-<dl>
-<dt>Energy</dt><dd>288 kJ</dd>
-<dt>Carbohydrates</dt><dd>18.1 g</dd>
-<dt>Protein</dt><dd>0.72 g</dd>
-</dl>
+    <p class="whatever">Per 100 g</p>
+  <dl>
+    <dt>Energy</dt><dd>288 kJ</dd>
+    <dt>Carbohydrates</dt><dd>18.1 g</dd>
+    <dt>Protein</dt><dd>0.72 g</dd>
+  </dl>
 
 <h2>Red currant</h2>
-<p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-<figure>
-<img src="images/red-currants.jpg" alt="red currants on the vine">
-<figcaption>Ribes rubrum</figcaption>
-</figure>
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  <figure>
+    <img src="images/red-currants.jpg" alt="red currants on the vine">
+    <figcaption>Ribes rubrum</figcaption>
+  </figure>
 
 <h3>Nutrition information</h3>
-<div>
-<p>Per 100 g</p>
-</div>
-<dl>
-<dt>Energy</dt><dd>234 kJ</dd>
-<dt>Carbohydrates</dt><dd>13.8 g</dd>
-<dt>Protein</dt><dd>1.4 g</dd>
-</dl>
+    <p class="whatever">Per 100 g</p>
+  <dl>
+    <dt>Energy</dt><dd>234 kJ</dd>
+    <dt>Carbohydrates</dt><dd>13.8 g</dd>
+    <dt>Protein</dt><dd>1.4 g</dd>
+  </dl>
 
 <footer>
-<p class="webs">
-Content and images from <a href="http://en.wikipedia.org/wiki/Berry">Wikipedia.</a>
-</p>
+  <p class="webs">
+    Content and images from <a href="http://en.wikipedia.org/wiki/Berry">Wikipedia.</a>
+  </p>
 </footer>
