--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <h1>Berries</h1>
   <nav>
     <ol>
-      <li><a href="#">Blueberries</a></li>
-      <li><a href="#">Grapes</a></li>
-      <li><a href="#">Red Currants</a></li>
+      <li><a href="#Blueberries">Blueberries</a></li>
+      <li><a href="#Grapes">Grapes</a></li>
+      <li><a href="#Red-currants">Red Currants</a></li>
     </ol>
   </nav>
 </header>
@@ -27,7 +27,7 @@
   <div class="speaker">— E. B. White</div>
 </blockquote>
 
-<h2>Blueberries</h2>
+<h2 id="Blueberries">Blueberries</h2>
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   <figure>
     <img src="images/blueberries.jpg" alt="blue berries on the vine">
@@ -42,7 +42,7 @@
     <dt>Protein</dt><dd>0.74 g</dd>
   </dl>
 
-<h2>Grapes</h2>
+<h2 id="Grapes">Grapes</h2>
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   <figure>
     <img src="images/grapes.jpg" alt="purple grapes on the vine">
@@ -57,7 +57,7 @@
     <dt>Protein</dt><dd>0.72 g</dd>
   </dl>
 
-<h2>Red currant</h2>
+<h2 id="Red-currants">Red Currants</h2>
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   <figure>
     <img src="images/red-currants.jpg" alt="red currants on the vine">
